# Next.RS

./: .gitignore  Cargo.toml  README.md  test.rs
example/: Cargo.toml  expanded.rs
example/src/: main.rs
example/src/api/v1/: mod.rs
example/src/routes/: index.html
example/src/routes/api/v1/: test.rs
example/src/routes/api/v1/__id/: detail.rs  this.rs
example/src/routes/api/v1/check/: __id.rs  detail.rs  mod.rs  this.rs
src/: defines.rs  lib.rs  mime_type.rs  route.rs
