[package]
name = "next_rs"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
engineioxide = "0.6.0"
futures = "0.3.29"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
serde_json = "^1.0.107"
socketioxide = "0.6.0"
tokio = { version = "^1.33.0", features = ["macros", "rt-multi-thread"] }
